--- a/OpenSky.Client/Pages/Settings.xaml
+++ b/OpenSky.Client/Pages/Settings.xaml
@@ -47,6 +47,25 @@
                 </Grid>
             </Grid>
         </GroupBox>
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock FontWeight="DemiBold">Units</TextBlock>
+            </GroupBox.Header>
+            <Grid Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" SharedSizeGroup="Labels" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center">Weight:</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="1" VerticalAlignment="Center">Fuel:</TextBlock>
+                <ComboBox Grid.Column="1" Grid.Row="0" MinWidth="150" Margin="10,5,0,5" ItemsSource="{Binding WeightUnits}" SelectedItem="{Binding WeightUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <ComboBox Grid.Column="1" Grid.Row="1" MinWidth="150" Margin="10,5,0,5" ItemsSource="{Binding FuelUnits}" SelectedItem="{Binding FuelUnit, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            </Grid>
+        </GroupBox>
         <StackPanel Orientation="Horizontal" Margin="5,10,5,0">
             <Button Padding="5,5" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding SaveSettingsCommand}">Save</Button>
             <Button VerticalAlignment="Center" Margin="5,0,0,0" Padding="5,5" Command="{Binding RestoreDefaultsCommand}">Restore Defaults</Button>
